--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 body, button, a, h1, h4, h5, h6, p, span {
   font-family: 'Montserrat', sans-serif;
 }
