--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   margin: 3rem 1rem;
-  height: 100vh;
 }
 
 .about__avata {
@@ -17,17 +16,23 @@
   width: 50%;
 }
 
+.about__info {
+  margin-bottom: 1rem;
+}
+
 .about__info h3 {
   font-size: 30px;
   font-weight: 800;
   margin: 0;
 }
 
-.about__info span {
+.about__info h6 {
   font-size: 16px;
   color: rgb(116, 116, 116);
   letter-spacing: 2px;
   text-transform: uppercase;
+  margin-bottom: 1rem;
+  font-weight: 400;
 }
 
 .about__skill-item, .about__skill-process {
@@ -37,12 +42,12 @@
   position: relative;
   border-radius: 5px;
   box-shadow: 0px 2px 7px rgba(13, 13, 13, 0.22) inset;
+  z-index: -1;
 }
 
 .about__skill-item h6 {
   margin: 0.2rem;
   padding-left: 2rem;
-  z-index: 1;
   position: relative;
   color: white;
   font-size: 15px;
@@ -57,9 +62,9 @@
 }
 
 .about__contact-btn {
-  width: 15%;
-  padding: 0.8rem;
-  font-size: 15px;
+  width: 8rem;
+  padding: 0.6rem;
+  font-size: 14px;
   cursor: pointer;
   border-radius: 5px;
   border: 1px solid #535353;
@@ -71,3 +76,13 @@
   background-color: black;
   color: white;
 }
+
+/* @media only screen and (max-width: 360px) {
+  .about {
+    width: 665px;
+  }
+
+  .about img {
+    width: 40%;
+  }
+} */
