--- a/src/styles/Blogs.css
+++ b/src/styles/Blogs.css
@@ -13,8 +13,8 @@
   text-align: center;
 }
 
-.carousel-row {
-  display: flex;
+.blogs__list {
+  z-index: -1;
 }
 
 .blogs__item {
@@ -74,3 +74,9 @@
   font-size: 16px;
   margin-bottom: 1rem;
 }
+
+/* @media only screen and (max-width: 360px) {
+  .blogs {
+    width: 665px;
+  }
+} */
