--- a/src/styles/Clients.css
+++ b/src/styles/Clients.css
@@ -1,3 +1,7 @@
+.clients {
+  margin-top: 5rem;
+}
+
 .clients__container {
   display: flex;
   flex-direction: column;
@@ -9,6 +13,10 @@
 .clients__container h3 {
   margin-top: 5rem;
   margin-bottom: 1rem;
+}
+
+.clients__feedback {
+  z-index: -1;
 }
 
 .clients__feedback-item {
@@ -40,6 +48,7 @@
   border-radius: 50%;
   margin-top: 3rem;
   margin-bottom: 0.5rem;
+  z-index: -1;
 }
 
 .clients__numbers {
@@ -62,3 +71,9 @@
   font-size: 15px;
   font-weight: 800;
 }
+
+/* @media only screen and (max-width: 360px) {
+  .clients {
+    width: 665px;
+  }
+} */
