--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -13,3 +13,9 @@
   color: white;
   margin: 2rem 0;
 }
+
+/* @media only screen and (max-width: 360px) {
+  .footer {
+    width: 665px;
+  }
+} */
