--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -6,7 +6,7 @@
 }
 
 .nav__logo h1 {
-  width: 50%;
+  width: 30%;
   letter-spacing: 5px;
   font-size: 30px;
   margin: 0;
@@ -46,7 +46,7 @@
   color: white;
   margin: 0;
   padding: 1rem;
-  z-index: 999;
+  z-index: 5;
 }
 
 .nav__bar {
@@ -58,11 +58,11 @@
   overflow: hidden;
   background-color: white;
   transition: all 0.5s ease-in-out;
-  z-index: 3;
+  z-index: 1;
 }
 
 .toggle {
-  height: 32vh;
+  height: 35vh;
   transition: all 0.5s ease-in-out;
 }
 
@@ -83,13 +83,34 @@
   font-size: 14px;
 }
 
-.nav__bar a:hover {
+.nav__bar span:hover {
   border-bottom: 2px solid black;
-  padding-bottom: 0.4rem;
+  padding-bottom: 0.1rem;
   transition: all 0.3s ease-out;
 }
 
-@media screen and (min-width: 768px) {
+/* @media only screen and (max-width: 360px) {
+  .nav__logo, .nav__bar {
+    margin-top: 0.5rem;
+    margin-bottom: -0.5rem;
+  }
+
+  .nav__logo h1 {
+    font-size: 25px;
+  }
+
+  .line {
+    width: 20px;
+    height: 2px;
+    margin: 3px;
+  }
+
+  .toggle {
+    height: 320px;
+  }
+} */
+
+@media only screen and (min-width: 768px) {
 
   .hamburger {
     display: none;
