--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -12,7 +12,7 @@
   margin-top: 4rem;
 }
 
-.about img {
+.about__avata img {
   width: 50%;
 }
 
@@ -32,6 +32,13 @@
   letter-spacing: 2px;
   text-transform: uppercase;
   margin-bottom: 1rem;
+  margin-top: 0.3rem;
+  font-weight: 400;
+}
+
+.about__info p {
+  font-size: 15px;
+  line-height: 1.6;
   font-weight: 400;
 }
 
@@ -77,12 +84,23 @@
   color: white;
 }
 
-/* @media only screen and (max-width: 360px) {
-  .about {
-    width: 665px;
+@media only screen and (max-width: 500px) {
+  .about__avata img {
+    width: 70%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .about__container {
+    display: flex;
+    flex-direction: row;
   }
 
-  .about img {
-    width: 40%;
+  .about__detail, .about__avata {
+    margin-top: 10rem;
   }
-} */
+
+  .about__avata img {
+    width: 70%;
+  }
+}
