--- a/src/styles/Blogs.css
+++ b/src/styles/Blogs.css
@@ -3,27 +3,28 @@
   flex-direction: column;
   justify-content: center;
   margin: 0 1rem;
-  margin-top: 5rem;
+  margin-top: 3rem;
   margin-bottom: 1rem;
 }
 
 .blogs__container h3 {
-  margin-top: 5rem;
-  margin-bottom: 3rem;
+  margin-top: 7rem;
+  margin-bottom: 2rem;
   text-align: center;
 }
 
 .blogs__list {
-  z-index: -1;
+  z-index: 5;
 }
 
 .blogs__item {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 40rem;
-  margin: 0.5rem;
-  box-shadow: 0px 10px 30px -8px rgba(0, 0, 0, 0.3);
+  height: 60vh;
+  margin: 0;
+  margin-bottom: 0.2rem;
+  box-shadow: 0px 10px 30px 8px rgba(0, 0, 0, 0.1);
 }
 
 .blogs__item-image {
@@ -31,7 +32,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 70%;
+  height: 65%;
   overflow: hidden;
 }
 
@@ -41,7 +42,7 @@
 }
 
 .blogs__item-image img {
-  width: 100%;
+  width: 95%;
   height: 100%;
   transition: 0.5s ease-in-out;
 }
@@ -64,7 +65,7 @@
 }
 
 .blogs__item-content h4 {
-  font-size: 25px;
+  font-size: 23px;
   font-weight: 800;
   margin: 1rem 0;
 }
@@ -75,8 +76,34 @@
   margin-bottom: 1rem;
 }
 
-/* @media only screen and (max-width: 360px) {
-  .blogs {
-    width: 665px;
+@media only screen and (max-width: 500px) {
+  .blogs__item {
+    height: 400px;
   }
-} */
+
+  .blogs__item-image {
+    height: 55%;
+  }
+
+  .blogs__item-content h6 {
+    font-size: 12px;
+  }
+  
+  .blogs__item-content h4 {
+    font-size: 20px;
+  }
+
+  .blogs__item-content span {
+    font-size: 14px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .blogs__item {
+    height: 55vh;
+  }
+
+  .blogs__item-image {
+    height: 60%;
+  }
+}
