--- a/src/styles/Clients.css
+++ b/src/styles/Clients.css
@@ -11,7 +11,7 @@
 }
 
 .clients__container h3 {
-  margin-top: 5rem;
+  margin-top: 10rem;
   margin-bottom: 1rem;
 }
 
@@ -27,7 +27,8 @@
 }
 
 .clients__feedback-item h6 {
-  margin: 0.5rem 0;
+  margin: 0.3rem 0;
+  margin-top: 1.5rem;
   font-size: 16px;
   font-weight: 600;
 }
@@ -39,7 +40,8 @@
 }
 
 .clients__feedback-item p {
-  padding: 0 1rem;
+  padding: 0 0.5rem;
+  word-spacing: 2px;
 }
 
 .clients__avata img {
@@ -72,8 +74,12 @@
   font-weight: 800;
 }
 
-/* @media only screen and (max-width: 360px) {
-  .clients {
-    width: 665px;
+@media only screen and (min-width: 768px) {
+  .clients__numbers {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 8rem;
   }
-} */
+}
