--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -3,10 +3,15 @@
   flex-direction: column;
   justify-content: center;
   margin: 0 1rem;
-  margin-top: 10rem;
-  margin-bottom: 5rem;
+  margin-top: 5rem;
+  margin-bottom: 1rem;
   text-align: center;
-  height: 80vh;
+  height: 100vh;
+}
+
+.contact__container h3 {
+  margin-top: 5rem;
+  margin-bottom: 3rem;
 }
 
 .contact__list {
@@ -14,7 +19,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 5rem;
 }
 
 .contact__item {
