--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -33,16 +33,16 @@
   margin: 0;
 }
 
-.home__name b {
-  font-size: 40px;
-  font-weight: 400;
-  margin: 0;
-}
-
 .home__name {
   font-size: 35px;
   font-weight: 400;
   margin: 30px;
+}
+
+.home__name b {
+  font-size: 40px;
+  font-weight: 400;
+  margin: 0;
 }
 
 .home__social {
@@ -69,9 +69,16 @@
   color: red;
 }
 
-/* @media only screen and (max-width: 360px) {
-  .home {
-    width: 665px;
-    height: 100vh;
+@media only screen and (max-width: 500px) {
+  .home__caption h5 {
+    font-size: 50px;
   }
-} */
+  
+  .home__caption h6 {
+    font-size: 32px;
+  }
+
+  .home__name b {
+    font-size: 32px;
+  }
+}
