--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,43 +1,11 @@
 .nav__container {
-  position: fixed;
-  width: 100%;
-  z-index: 1;
-  background-color: white;
-}
-
-.nav__logo h1 {
-  width: 30%;
-  letter-spacing: 5px;
-  font-size: 30px;
-  margin: 0;
-  margin-left: 2rem;
-  color: black;
-  cursor: pointer;
-}
-
-.hamburger .line {
-  background-color: black;
-}
-
-/* response navbar */
-
-.hamburger {
-  position: absolute;
-  right: 8%;
-  top: 30%;
-  cursor: pointer;
-}
-
-.line {
-  width: 25px;
-  height: 2px;
-  background-color: white;
-  margin: 5px;
-}
-
-.nav__container {
   display: flex;
   flex-direction: column;
+  position: fixed;
+  width: 100%;
+  z-index: 9;
+  background-color: white;
+  box-shadow: 0px 30px 50px rgba(0, 0, 0, 0.1);
 }
 
 .nav__logo {
@@ -46,7 +14,16 @@
   color: white;
   margin: 0;
   padding: 1rem;
-  z-index: 5;
+}
+
+.nav__logo h1 {
+  width: 30%;
+  letter-spacing: 5px;
+  font-size: 27px;
+  margin: 0;
+  margin-left: 2rem;
+  color: black;
+  cursor: pointer;
 }
 
 .nav__bar {
@@ -58,7 +35,6 @@
   overflow: hidden;
   background-color: white;
   transition: all 0.5s ease-in-out;
-  z-index: 1;
 }
 
 .toggle {
@@ -75,12 +51,10 @@
   color: black;
 }
 
-/* response navbar */
-
 .nav__bar li {
   list-style-type: none;
   cursor: pointer;
-  font-size: 14px;
+  font-size: 13px;
 }
 
 .nav__bar span:hover {
@@ -89,97 +63,75 @@
   transition: all 0.3s ease-out;
 }
 
-/* @media only screen and (max-width: 360px) {
-  .nav__logo, .nav__bar {
-    margin-top: 0.5rem;
-    margin-bottom: -0.5rem;
-  }
+.nav__bar .active {
+  border-bottom: 2px solid black;
+  padding-bottom: 0.1rem;
+}
 
+.hamburger .line {
+  background-color: black;
+}
+
+.hamburger {
+  position: absolute;
+  right: 10%;
+  top: 30%;
+  cursor: pointer;
+}
+
+.line {
+  width: 24px;
+  height: 2px;
+  background-color: white;
+  margin: 5px;
+}
+
+.nav__waypoint {
+  position: fixed ;
+  bottom: 5%;
+  width: 100%;
+  height: 1vh;
+  opacity: 0;
+}
+
+@media only screen and (max-width: 500px) {
   .nav__logo h1 {
-    font-size: 25px;
-  }
-
-  .line {
-    width: 20px;
-    height: 2px;
-    margin: 3px;
+    margin-left: 1rem;
+    font-size: 24px;
   }
 
   .toggle {
-    height: 320px;
+    height: 300px;
   }
-} */
+
+  .nav__bar li {
+    font-size: 12px;
+  }
+}
 
 @media only screen and (min-width: 768px) {
-
-  .hamburger {
-    display: none;
-  }
-
   .nav__container {
     display: flex;
-    justify-content: center;
-    position: fixed;
-    z-index: 1;
-  }
-
-  .nav__logo {
-    flex: 1;
-    text-align: center;
-    color: white;
-    padding: 1rem 0;
-  }
-
-  .nav__bar {
-    display: flex;
-    justify-content: center;
-    flex: 3;
-    height: 5rem;
-    background: black;
-    transition: all 0.5s ease-in-out;
-  }
-
-  .nav__bar a {
-    color: white;
-    font-size: 16px;
-  }
-
-  /* .nav__container {
-    display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: baseline;
-    position: fixed;
-    width: 100%;
-    z-index: 1;
-  }
-
-  .nav__logo {
-    flex: 1;
-    text-align: center;
-    color: white;
-    padding: 1rem 0;
-  }
-  
-  .nav__bar {
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-end;
-    flex: 3;
-    margin-right: 1rem;
-    background: transparent;
-  }
-
-  .nav__bar a {
-    color: white;
-    font-size: 16px;
   }
 
   .hamburger {
     display: none;
   }
 
-  .nav__bar.toggle {
-    height: 25vh;
-  } */
+  .nav__logo {
+    width: 20%;
+  }
+
+  .nav__bar {
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    color: black;
+  }
+
+  .nav__bar li{
+    margin: 1rem;
+  }
 }
