--- a/src/styles/Services.css
+++ b/src/styles/Services.css
@@ -7,7 +7,7 @@
 }
 
 .services__container h3 {
-  margin-top: 5rem;
+  margin-top: 10rem;
   margin-bottom: 1rem;
 }
 
@@ -20,6 +20,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
   margin: 1rem 0;
   border-radius: 10px;
   box-shadow: 3px 3px 1px rgba(0, 0, 0, 0.1);
@@ -53,8 +54,26 @@
   color: white;
 }
 
-/* @media only screen and (max-width: 360px) {
-  .services {
-    width: 665px;
+@media only screen and (min-width: 768px) {
+  .services__list {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 5rem;
   }
-} */
+
+  .services__item {
+    width: 30%;
+    margin: 1rem 0.5rem;
+  }
+
+  .services__item p {
+    padding-bottom: 2rem;
+    word-spacing: 2px;
+  }
+
+  .services__item span {
+    margin-top: 2rem;
+  }
+}
