--- a/src/styles/Works.css
+++ b/src/styles/Works.css
@@ -8,7 +8,7 @@
 
 .portfolio__container h3 {
   text-align: center;
-  margin-top: 5rem;
+  margin-top: 10rem;
   margin-bottom: 1rem;
 }
 
@@ -23,7 +23,7 @@
 .portfolio__navbar li {
   list-style-type: none;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 800;
   margin: 1rem 0.5rem;
 }
@@ -46,7 +46,8 @@
   align-items: center;
 }
 
-.item-img {
+.portfolio__image-item{
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -61,13 +62,74 @@
   width: 90vw;
 }
 
-/* @media only screen and (max-width: 360px) {
-  .portfolio {
-    width: 665px;
+.portfolio__image-overlay {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem;
+  width: 95%;
+  height: 95%;
+  background-color: rgb(230, 230, 230);
+  transition: all 0.3s ease-in-out;
+  opacity: 0;
+}
+
+.overlay h6 {
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 2px;
+}
+
+.overlay-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.overlay-icon span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0.5rem 0.2rem;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  background-color: black;
+  color: white;
+  border: 1px solid;
+}
+
+.portfolio__image-item:hover .portfolio__image-overlay {
+  opacity: 1;
+  transition: all 0.3s ease-in-out;
+}
+
+.overlay-icon span:hover {
+  background-color: white;
+  color: black;
+  cursor: pointer;
+}
+
+@media only screen and (min-width: 768px) {
+  .portfolio__navbar li {
+    margin: 1rem 1rem;
   }
 
-  .item-img {
-    height: 15rem;
-    width: 15rem;
+  .portfolio__image {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
   }
-} */
+
+  .portfolio__image-item{
+    width: 29%;
+  }
+
+  .portfolio__image img {
+    width: 100%;
+    height: 28vw;
+  }
+
+
+}
