--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -104,3 +104,13 @@
     width: 70%;
   }
 }
+
+@media only screen and (min-width: 1200px) {
+  .about__avata img {
+    width: 60%;
+  }
+
+  .about__detail {
+    margin-right: 6rem;
+  }
+}
