--- a/src/styles/Clients.css
+++ b/src/styles/Clients.css
@@ -1,22 +1,21 @@
-.clients {
-  margin-top: 5rem;
-}
-
 .clients__container {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 0 1rem;
+  margin: 0;
   text-align: center;
 }
 
 .clients__container h3 {
   margin-top: 10rem;
-  margin-bottom: 1rem;
+  padding-top: 5rem;
+  background-color: #f7f7f7;
 }
 
 .clients__feedback {
   z-index: -1;
+  background-color: #f7f7f7;
+  padding-bottom: 3rem;
 }
 
 .clients__feedback-item {
@@ -40,7 +39,7 @@
 }
 
 .clients__feedback-item p {
-  padding: 0 0.5rem;
+  padding: 0 2rem;
   word-spacing: 2px;
 }
 
@@ -63,23 +62,39 @@
   margin-top: 2rem;
 }
 
-.clients__numbers-item h3 {
+.clients__numbers-item h4 {
   margin: 0.8rem 0;
   font-size: 30px;
+  background-color: white;
 }
 
 .clients__numbers-item p {
-  margin: 0.5rem 0;
+  margin: 0;
   font-size: 15px;
   font-weight: 800;
 }
 
 @media only screen and (min-width: 768px) {
+  .clients__feedback-item p {
+    padding: 0 6rem;
+  }
+
   .clients__numbers {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    margin-top: 8rem;
+    margin-top: 5rem;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .clients__feedback-item p {
+    padding: 0 10rem;
+  }
+
+  .clients__numbers {
+    margin-left: 5rem;
+    margin-right: 5rem;
   }
 }
