--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -2,15 +2,15 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 0 1rem;
-  margin-top: 5rem;
-  margin-bottom: 1rem;
+  align-items: center;
+  margin: 0;
+  margin-bottom: 3rem;
   text-align: center;
   height: 100vh;
 }
 
 .contact__container h3 {
-  margin-top: 5rem;
+  margin-top: 10rem;
   margin-bottom: 3rem;
 }
 
@@ -37,6 +37,7 @@
   width: 60px;
   border-radius: 50%;
   transition: 0.5s ease-in-out;
+  background-color: #f7f7f7;
 }
 
 .contact__item:hover span {
@@ -54,8 +55,25 @@
   margin: 0;
 }
 
-/* @media only screen and (max-width: 360px) {
-  .contact {
-    width: 665px;
+@media only screen and (min-width: 768px) {
+  .contact__container {
+    height: 80vh;
   }
-} */
+
+  .contact__container h3 {
+    margin-top: -5rem;
+    margin-bottom: 8rem;
+  }
+
+  .contact__list {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .contact__item {
+    width: 25%;
+    margin: 0 2rem;
+  }
+}
