--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,4 +1,4 @@
-.home {
+.home__container {
   position: relative;
   background-image: url(../image/background-view.png);
   background-position: 0px 0px;
@@ -6,7 +6,7 @@
   width: 100%;
 }
 
-.home__container {
+.hom__wrapper {
   background-image: linear-gradient( to bottom, rgba(13, 13, 13, 0.4), rgba(13, 13, 13, 0.4));
   height: 100vh;
   width: 100%;
@@ -66,7 +66,7 @@
 }
 
 .home__social span:hover {
-  color: red;
+  color: cyan;
 }
 
 @media only screen and (max-width: 500px) {
