--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -5,7 +5,7 @@
   width: 100%;
   z-index: 9;
   background-color: white;
-  box-shadow: 0px 30px 50px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
 }
 
 .nav__logo {
@@ -121,17 +121,25 @@
   }
 
   .nav__logo {
-    width: 20%;
+    width: 35%;
+    margin-left: 3rem;
   }
 
   .nav__bar {
     height: 50px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     color: black;
   }
 
   .nav__bar li{
     margin: 1rem;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .nav__logo {
+    width: 70%;
+    margin-left: 5rem;
   }
 }
