--- a/src/styles/Services.css
+++ b/src/styles/Services.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  margin: 0 1rem;
+  margin: 5rem 0;
+  background-color: #f7f7f7;
 }
 
 .services__container h3 {
@@ -14,6 +15,7 @@
 .services__list {
   display: flex;
   flex-direction: column;
+  padding-bottom: 5rem;
 }
 
 .services__item {
@@ -24,6 +26,7 @@
   margin: 1rem 0;
   border-radius: 10px;
   box-shadow: 3px 3px 1px rgba(0, 0, 0, 0.1);
+  background-color: white;
 }
 
 .services__item span {
@@ -33,7 +36,7 @@
   width: 90px;
   height: 90px;
   border-radius: 50%;
-  background-color: white;
+  background-color: #f7f7f7;
   transition: 0.5s ease-in-out;
 }
 
@@ -75,5 +78,12 @@
 
   .services__item span {
     margin-top: 2rem;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .services__list {
+    margin-left: 5rem;
+    margin-right: 5rem;
   }
 }
