--- a/src/styles/Works.css
+++ b/src/styles/Works.css
@@ -1,5 +1,5 @@
 .portfolio__container {
-  margin: 0 1rem;
+  margin: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -130,6 +130,11 @@
     width: 100%;
     height: 28vw;
   }
+}
 
-
+@media only screen and (min-width: 1200px) {
+  .portfolio__image {
+    margin-left: 4rem;
+    margin-right: 4rem;
+  }
 }
