--- a/src/App.css
+++ b/src/App.css
@@ -7,15 +7,18 @@ html {
   scroll-behavior: smooth;
 }
 
-body, button, a, h1, h4, h5, h6, p, span {
+body, button, h1, h2, h4, h5, h6, p, span, input, textarea {
   font-family: 'Montserrat', sans-serif;
 }
 
 p {
   color: #5f5f5f;
+  font-size: 15px;
+  line-height: 1.6;
+  font-weight: 400;
 }
 
-h3 {
-  font-size: 35px;
+h2 {
+  font-size: 40px;
   font-weight: 800;
 }
