--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,64 +1,64 @@
 .about__container {
   display: flex;
   flex-direction: column;
-  margin: 3rem 1rem;
+  justify-content: center;
+  padding: 0 10px;
 }
 
 .about__avata {
   display: flex;
   justify-content: center;
-  align-items: center;
-  height: 50vh;
-  margin-top: 4rem;
+
+  height: 450px;
+  padding-top: 75px;
 }
 
 .about__avata img {
-  width: 50%;
+  width: 100%;
+  height: 90%;
 }
 
-.about__info {
-  margin-bottom: 1rem;
+.about__detail {
+  padding-bottom: 75px;
 }
 
-.about__info h3 {
+.about__info h2 {
+  margin: 0;
   font-size: 30px;
   font-weight: 800;
-  margin: 0;
 }
 
 .about__info h6 {
-  font-size: 16px;
-  color: rgb(116, 116, 116);
-  letter-spacing: 2px;
-  text-transform: uppercase;
-  margin-bottom: 1rem;
-  margin-top: 0.3rem;
+  margin: 5px 0;
+  font-size: 15px;
   font-weight: 400;
+  letter-spacing: 2px;
+  color: rgb(116, 116, 116);
+  text-transform: uppercase;
 }
 
-.about__info p {
-  font-size: 15px;
-  line-height: 1.6;
-  font-weight: 400;
+.about__skill {
+  margin: 20px 0;
 }
 
 .about__skill-item, .about__skill-process {
-  width: 100%;
-  height: 1.8rem;
-  margin-bottom: 1rem;
   position: relative;
+  z-index: -1;
+  width: 100%;
+  height: 25px;
+
+  margin-bottom: 20px;
   border-radius: 5px;
   box-shadow: 0px 2px 7px rgba(13, 13, 13, 0.22) inset;
-  z-index: -1;
 }
 
 .about__skill-item h6 {
-  margin: 0.2rem;
-  padding-left: 2rem;
   position: relative;
+  padding-left: 15px;
+  padding-top: 4px;
+
+  font-size: 13px;
   color: white;
-  font-size: 15px;
-  padding-top: 0.3rem;
 }
 
 .about__skill-item span {
@@ -69,25 +69,20 @@
 }
 
 .about__contact-btn {
-  width: 8rem;
-  padding: 0.6rem;
+  width: 120px;
+  padding: 12px;
   font-size: 14px;
-  cursor: pointer;
+  background-color: white;
+
   border-radius: 5px;
   border: 1px solid #535353;
   outline: none;
-  background-color: white;
+  cursor: pointer;
 }
 
 .about__contact-btn:hover {
   background-color: black;
   color: white;
-}
-
-@media only screen and (max-width: 500px) {
-  .about__avata img {
-    width: 70%;
-  }
 }
 
 @media only screen and (min-width: 768px) {
@@ -96,21 +91,32 @@
     flex-direction: row;
   }
 
-  .about__detail, .about__avata {
-    margin-top: 10rem;
+  .about__avata img {
+    width: 95%;
+    height: 100%;
   }
 
-  .about__avata img {
-    width: 70%;
+  .about__detail, .about__avata{
+    margin-top: 100px;
+  }
+
+  .about__detail {
+    padding-left: 10px;
+  }
+
+  .about__avata {
+    padding-top: 0;
+  }
+
+  .about__info p {
+    font-size: 15px;
   }
 }
 
 @media only screen and (min-width: 1200px) {
-  .about__avata img {
-    width: 60%;
-  }
-
-  .about__detail {
-    margin-right: 6rem;
+  .about__container {
+    width: 1170px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
