--- a/src/styles/Clients.css
+++ b/src/styles/Clients.css
@@ -2,20 +2,20 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 0;
   text-align: center;
 }
 
-.clients__container h3 {
-  margin-top: 10rem;
-  padding-top: 5rem;
+.clients__wrapper {
   background-color: #f7f7f7;
+}
+
+.clients__wrapper h2 {
+  margin-top: 150px;
 }
 
 .clients__feedback {
   z-index: -1;
-  background-color: #f7f7f7;
-  padding-bottom: 3rem;
+  padding-bottom: 150px;
 }
 
 .clients__feedback-item {
@@ -23,13 +23,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 10px 0;
+  margin-top: 30px;
 }
 
 .clients__feedback-item h6 {
-  margin: 0.3rem 0;
-  margin-top: 1.5rem;
   font-size: 16px;
   font-weight: 600;
+  margin-top: 20px;
 }
 
 .clients__feedback-item span {
@@ -39,62 +40,62 @@
 }
 
 .clients__feedback-item p {
-  padding: 0 2rem;
+  margin: 0;
+  padding: 0 8vw;
   word-spacing: 2px;
 }
 
 .clients__avata img {
-  height: 6rem;
-  width: 6rem;
-  border-radius: 50%;
-  margin-top: 3rem;
-  margin-bottom: 0.5rem;
+  height: 80px;
+  width: 80px;
   z-index: -1;
+
+  margin: 15px;
+  border-radius: 50%;
 }
 
 .clients__numbers {
   display: flex;
   flex-direction: column;
-  margin-top: 5rem;
+  margin: 70px 0;
 }
 
 .clients__numbers-item {
-  margin-top: 2rem;
+  margin-top: 30px;
+}
+
+.clients__numbers-item span, h4, p {
+  margin: 10px 0;
 }
 
 .clients__numbers-item h4 {
-  margin: 0.8rem 0;
   font-size: 30px;
   background-color: white;
 }
 
 .clients__numbers-item p {
-  margin: 0;
   font-size: 15px;
   font-weight: 800;
+  color: #748182;
 }
 
 @media only screen and (min-width: 768px) {
-  .clients__feedback-item p {
-    padding: 0 6rem;
-  }
-
   .clients__numbers {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    margin-top: 5rem;
+  }
+
+  .clients__numbers {
+    margin: 100px 0;
   }
 }
 
 @media only screen and (min-width: 1200px) {
-  .clients__feedback-item p {
-    padding: 0 10rem;
-  }
-
-  .clients__numbers {
-    margin-left: 5rem;
-    margin-right: 5rem;
+  .clients__feedback, .clients__numbers {
+    width: 1170px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
