--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -2,16 +2,12 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  margin: 0;
-  margin-bottom: 3rem;
   text-align: center;
-  height: 100vh;
+  padding: 0 10px;
 }
 
-.contact__container h3 {
-  margin-top: 10rem;
-  margin-bottom: 3rem;
+.contact__container h2 {
+  margin-top: 150px;
 }
 
 .contact__list {
@@ -19,6 +15,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 70px 0;
 }
 
 .contact__item {
@@ -26,7 +23,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 2rem;
+  margin-bottom: 30px;
 }
 
 .contact__item span {
@@ -35,9 +32,10 @@
   align-items: center;
   height: 60px;
   width: 60px;
+
+  background-color: #f7f7f7;
   border-radius: 50%;
   transition: 0.5s ease-in-out;
-  background-color: #f7f7f7;
 }
 
 .contact__item:hover span {
@@ -47,7 +45,7 @@
 
 .contact__item h6 {
   font-size: 16px;
-  margin: 1rem 0;
+  margin: 15px 0;
 }
 
 .contact__item p {
@@ -55,25 +53,81 @@
   margin: 0;
 }
 
+.contact__form {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 150px;
+}
+
+.contact__form textarea {
+  height: 150px;
+  color: #5f5f5f;
+}
+
+.contact__form input, textarea {
+  margin-bottom: 15px;
+  padding: 10px;
+
+  font-size: 14px;
+  background-color: #f4f4f4;
+
+  border: none;
+  outline: none;
+  border-radius: 5px;
+}
+
+.contact__button {
+  width: 120px;
+  padding: 10px;
+  margin: 10px 0;
+
+  font-size: 14px;
+  color: white;
+  background-color: black;
+
+  border-radius: 5px;
+  border: 1px solid #535353;
+  outline: none;
+  cursor: pointer;
+}
+
+.contact__button:hover {
+  color: black;
+  background-color: white;
+}
+
 @media only screen and (min-width: 768px) {
-  .contact__container {
-    height: 80vh;
-  }
-
-  .contact__container h3 {
-    margin-top: -5rem;
-    margin-bottom: 8rem;
-  }
-
   .contact__list {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    align-items: baseline;
+    padding: 0 5vw;
   }
 
   .contact__item {
     width: 25%;
-    margin: 0 2rem;
+  }
+
+  .contact__form {
+    padding: 0 5vw;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .contact__list, .contact__form {
+    width: 945px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .contact__input {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .contact__input input {
+    width: 45%;
   }
 }
